--- a/LifeHelperClient/Base.lproj/Main.storyboard
+++ b/LifeHelperClient/Base.lproj/Main.storyboard
@@ -1,26 +1,178 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BVl-4j-ffz">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Navigation Controller-->
+        <scene sceneID="9SN-Fn-Wo0">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="BVl-4j-ffz" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="YNd-6x-cKx">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="2FM-aa-yiQ" kind="relationship" relationship="rootViewController" id="rNB-zG-g4Q"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eld-N9-nbA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="120.8" y="44.527736131934034"/>
+        </scene>
+        <!--LifeHelperClient-->
+        <scene sceneID="zI3-aF-ZMh">
+            <objects>
+                <tableViewController id="2FM-aa-yiQ" customClass="CXHomeTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="60" sectionHeaderHeight="28" sectionFooterHeight="28" id="cgW-aN-4kH">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <sections>
+                            <tableViewSection id="dyo-eg-a0t">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" textLabel="iwg-EW-6uq" style="IBUITableViewCellStyleDefault" id="QAk-Wi-7Ox">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="QAk-Wi-7Ox" id="Bhi-H1-QXa">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="59.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="系统设置" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="iwg-EW-6uq">
+                                                    <rect key="frame" x="15" y="0.0" width="345" height="59.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="HKe-Nc-xZo" kind="show" id="j6C-ry-uFT"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" textLabel="K8r-4v-Mht" style="IBUITableViewCellStyleDefault" id="x0y-Wg-H0z">
+                                        <rect key="frame" x="0.0" y="60" width="375" height="60"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="x0y-Wg-H0z" id="nFf-hf-4Dj">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="59.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="自定义命令" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="K8r-4v-Mht">
+                                                    <rect key="frame" x="15" y="0.0" width="345" height="59.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" textLabel="wWy-zE-1Du" style="IBUITableViewCellStyleDefault" id="vMN-e8-hw4">
+                                        <rect key="frame" x="0.0" y="120" width="375" height="60"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vMN-e8-hw4" id="Kgz-wZ-yZk">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="59.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="自定义命令" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="wWy-zE-1Du">
+                                                    <rect key="frame" x="15" y="0.0" width="345" height="59.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="2FM-aa-yiQ" id="eBa-or-ljJ"/>
+                            <outlet property="delegate" destination="2FM-aa-yiQ" id="qR9-ky-7Ra"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="LifeHelperClient" id="TXF-Eb-6Se"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FDZ-a0-vuf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="814" y="45"/>
+        </scene>
+        <!--系统设置-->
+        <scene sceneID="alw-8J-48h">
+            <objects>
+                <viewController id="HKe-Nc-xZo" customClass="CXSystemSettingsViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="yIU-59-cUR"/>
+                        <viewControllerLayoutGuide type="bottom" id="xkp-t7-CHe"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Zd0-eU-9WJ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="fvL-zq-haU">
+                                <rect key="frame" x="120" y="148" width="226" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="ZLm-mQ-blx"/>
+                                    <constraint firstAttribute="width" constant="222" id="uCm-4T-u6q"/>
+                                </constraints>
+                                <connections>
+                                    <action selector="brightnessSliderDidSlide:" destination="HKe-Nc-xZo" eventType="valueChanged" id="9Vx-XG-oeO"/>
+                                </connections>
+                            </slider>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="屏幕亮度" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VTn-ls-cMD">
+                                <rect key="frame" x="33" y="153" width="70" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="系统音量" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fCa-7o-tYU">
+                                <rect key="frame" x="33" y="215" width="70" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="4dR-ke-dk3">
+                                <rect key="frame" x="140" y="210" width="118" height="31"/>
+                                <connections>
+                                    <action selector="volumnSliderDidSlide:" destination="HKe-Nc-xZo" eventType="valueChanged" id="N2q-VT-mfi"/>
+                                </connections>
+                            </slider>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="4dR-ke-dk3" firstAttribute="leading" secondItem="fvL-zq-haU" secondAttribute="leading" constant="20" id="0dX-DZ-z8h"/>
+                            <constraint firstItem="fvL-zq-haU" firstAttribute="top" secondItem="yIU-59-cUR" secondAttribute="bottom" constant="84" id="4Bk-Te-NL9"/>
+                            <constraint firstItem="fCa-7o-tYU" firstAttribute="top" secondItem="VTn-ls-cMD" secondAttribute="bottom" constant="41" id="5C0-C4-bkW"/>
+                            <constraint firstItem="4dR-ke-dk3" firstAttribute="width" secondItem="fvL-zq-haU" secondAttribute="width" constant="-108" id="7CT-d7-p7f"/>
+                            <constraint firstItem="fvL-zq-haU" firstAttribute="leading" secondItem="VTn-ls-cMD" secondAttribute="trailing" constant="19" id="APp-Oi-Kpk"/>
+                            <constraint firstItem="fCa-7o-tYU" firstAttribute="width" secondItem="VTn-ls-cMD" secondAttribute="width" id="CYh-d8-VA0"/>
+                            <constraint firstItem="4dR-ke-dk3" firstAttribute="height" secondItem="fvL-zq-haU" secondAttribute="height" id="GHg-tB-Kag"/>
+                            <constraint firstItem="fvL-zq-haU" firstAttribute="centerY" secondItem="VTn-ls-cMD" secondAttribute="centerY" id="SvV-IZ-5p2"/>
+                            <constraint firstItem="4dR-ke-dk3" firstAttribute="centerY" secondItem="fCa-7o-tYU" secondAttribute="centerY" id="ZSu-qd-IVg"/>
+                            <constraint firstItem="VTn-ls-cMD" firstAttribute="leading" secondItem="Zd0-eU-9WJ" secondAttribute="leadingMargin" constant="17" id="dKM-cX-7tk"/>
+                            <constraint firstItem="fCa-7o-tYU" firstAttribute="height" secondItem="VTn-ls-cMD" secondAttribute="height" id="faD-mE-A9q"/>
+                            <constraint firstItem="fCa-7o-tYU" firstAttribute="leading" secondItem="VTn-ls-cMD" secondAttribute="leading" id="vfc-kb-5ZS"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="系统设置" id="A88-qy-0U7"/>
+                    <connections>
+                        <outlet property="brightnessSlider" destination="fvL-zq-haU" id="iAI-R2-LVh"/>
+                        <outlet property="volumnSlider" destination="4dR-ke-dk3" id="xOF-yI-yme"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Xg0-hT-NwF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1581.5999999999999" y="-266.71664167916043"/>
         </scene>
     </scenes>
 </document>
